config/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels: 
         component: api
    spec:
      containers:
        - name: api
          image: dasiloy/docker-express-api
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
