config/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        image:  dasiloy/docker-express-worker
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
